feat: update style

--- a/src/antd-theme-override.less
+++ b/src/antd-theme-override.less
@@ -8,7 +8,9 @@
 // @ant-prefix : ant;
 //
 // // -------- Colors -----------
-// @primary-color : @blue-6;
+@pink : #ffc0cb;
+
+@primary-color : @pink;
 // @info-color : @blue-6;
 // @success-color : @green-6;
 // @processing-color : @blue-6;
